# daxa-rs

./: Cargo.toml  rust-toolchain
common/: Cargo.toml
common/src/: window.rs
examples/0_rectangle_cutting/: main.rs
examples/0_rectangle_cutting/shaders/: Cargo.toml
examples/0_rectangle_cutting/shaders/src/: lib.rs
examples/0_rectangle_cutting/shaders_shared/: Cargo.toml
examples/0_rectangle_cutting/shaders_shared/src/: lib.rs
src/: context.rs  core.rs  device.rs  lib.rs  memory_block.rs  pipeline.rs  semaphore.rs  split_barrier.rs  swapchain.rs  timeline_query.rs  types.rs
src/command_list/: info.rs  mod.rs
src/daxa_derive/: Cargo.toml
src/daxa_derive/src/: lib.rs  resource_id.rs  slot.rs
src/daxa_shared/: Cargo.toml
src/daxa_shared/src/: lib.rs  typed_buffer.rs
src/gpu_resources/: mod.rs  resource_pool.rs  resource_table.rs
src/util/: mem.rs  mod.rs  pipeline_manager.rs
src/util/task_graph/: mod.rs  types.rs
tests/: 1_context.rs  2_device.rs  3_command_list.rs  4_synchronization.rs  5_swapchain.rs  6_pipeline_manager.rs  7_task_graph.rs  8_mem.rs
tests/6_pipeline_manager/shaders/: Cargo.toml
tests/6_pipeline_manager/shaders/src/: lib.rs  test0.rs  test1.rs
tests/task_graph/: mod.rs
