[workspace]
members = [
    "tests/6_pipeline_manager/shaders",
    "examples/0_rectangle_cutting/shaders"
]


[package]
name = "daxa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "gpu_id_validation", 
    "pipeline_manager", 
    # "conservative_rasterization"
]
gpu_id_validation = []
pipeline_manager = []
conservative_rasterization = []

[dependencies]
daxa_derive = { path = "./src/daxa_derive" }
daxa_shared = { path = "./src/daxa_shared" }

anyhow = "1.0.66"
ash = { version = "0.37.1", features = ["linked"] }
ash-window = "0.12.0"
bitfield = "0.14.0"
gpu-allocator = "0.22.0"
raw-window-handle = "0.5.0"
spirv-builder = { version = "0.6.0", features = ["watch"] }
spirv-std = { version = "0.6.0" }

[patch.crates-io]
rustc_codegen_spirv = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }
spirv-std = { git = "https://github.com/LykenSol/rust-gpu", branch = "buffer-interface-block" }

[dev-dependencies]
glfw = "0.51.0"

common = { path = "./common" }
rectangle_cutting_shaders_shared = { path = "./examples/0_rectangle_cutting/shaders_shared" }
