[package]
name = "rectangle_cutting_shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]
test = false
doctest = false

[dependencies]
rectangle_cutting_shaders_shared = { path = "./../shaders_shared" }

daxa_shared = { path = "./../../../src/daxa_shared" }

spirv-std = { version = "0.4.0", features = ["glam"] }
